
* #564: Add :confval:`autodoc_docstring_signature` which retrieves
  the signature from the first line of the docstring, if it is
  found there.

* #176: Provide ``private-members`` option for autodoc directives.

* #520: Provide ``special-members`` option for autodoc directives.

* #138: Add an ``index`` role, to make inline index entries.

* #443: Allow referencing external graphviz files.

* Add ``pyramid`` theme.

* #98: Added a ``sphinx-apidoc`` script that autogenerates a
  hierarchy of source files containing autodoc directives to
  document modules and packages.

* #472: linkcheck builder: Check links in parallel, use HTTP HEAD
  requests and allow configuring the timeout.  New config values:
  :confval:`linkcheck_timeout` and :confval:`linkcheck_workers`.

* #273: Add an API for adding full-text search support for languages
  other than English.  Add support for Japanese.

* #221: Add Swedish locale.

* Added ``inline`` option to graphviz directives, and fixed the
  default (block-style) in LaTeX output.

* #521: Added :confval:`linkcheck_ignore` config value.

* #526: Added Iranian translation.

* #559: :confval:`html_add_permalinks` is now a string giving the
  text to display in permalinks.

* #553: Added :rst:dir:`testcleanup` blocks in the doctest extension.

* #209: Added :confval:`text_newlines` and :confval:`text_sectionchars`
  config values.

* Added :confval:`man_show_urls` config value.


Release 1.0.7 (in development)
==============================

* #568: Fix lookup of class attribute documentation on descriptors
  so that comment documentation now works.

* Fix traceback with ``only`` directives preceded by targets.

* Fix tracebacks occurring for duplicate C++ domain objects.


Release 1.0.6 (Jan 04, 2011)
============================

* #581: Fix traceback in Python domain for empty cross-reference
  targets.

* #283: Fix literal block display issues on Chrome browsers.
